Skip 'sidx' box processing; it's currently broken.

The current workaround fixes the issue of repeated frames, but
results in ffmpeg downloading tons of extra data during load
and seeking. Instead revert back to our previous workaround of
completely disabling sidx processing.

BUG=738595
TEST=seek doesn't download the whole file in some cases.

Change-Id: I8b0ec9d435036917cd450ab0c519d8ebae72b911
Reviewed-on: https://chromium-review.googlesource.com/557954
Reviewed-by: John Rummell <jrummell@chromium.org>